<resources>
    <string name="app_name">Placementez</string>
    <string name="text_button_login">Ingresar</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_username_login">Nombre de usuario</string>
    <string name="hint_password_login">Contraseña</string>
    <string name="facebook_app_id">387883138377441</string>
    <string name="fb_login_protocol_scheme">fb387883138377441</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name_create_account">Nombre Completo</string>
    <string name="hint_username_create_account">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirm">Confirmar Contraseña</string>
    <string name="hint_button_create_account">Únete</string>
    <string name="create_account_title_toolbar">Crear Cuenta</string>
    <string name="create_account_succes">Cuenta creada exitosamente</string>
    <string name="create_account_fail">Ocurrió un error al crear la cuenta</string>
    <string name="login_succes">Login Exitoso</string>
    <string name="tab_map">Mapa</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_search">Buscar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transitionname_place">transitionname_place</string>
    <string name="placename_card">Parque de la playa</string>
    <string name="searchhinttext">Buscar</string>
    <string name="placenamedetail_card">Parque en la playa</string>
    <string name="placeaddresdetail_card">Av libertadores # 60 - 45</string>
    <string name="productname_card">Pepsi</string>
    <string name="productprice_card">30 pesos</string>
    <string name="title_activity_maps">Map</string>
    <string name="loading_text">Cargando</string>
    <string name="text_titile_search_fragment">Lugares cercanos</string>
    <string name="creator_info">Realizado por Oscar Antonio Acelas Upegui</string>
    <string name="creator_info_mail">oaacelasu.developper@gmail.com</string>

</resources>
