<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".login.view.LoginViewImpl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/ivLoginLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo_placementez_big"
                android:layout_centerInParent="true"
                android:onClick="goToGithub"
                />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_horizontal_login"
                android:orientation="vertical"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtUsernameLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username_login"
                        />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password_login"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goToContainerActivity"
                    />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnSignInFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_bottom_button_facebook"
                    android:paddingTop="@dimen/padding_top_button_facebook"
                    />
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_to_login_buttons"
                    >

                    <TextView
                        android:id="@+id/tvDontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/colorNoAccent"
                        android:textSize="@dimen/edittext_textsize" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/edittext_textsize"
                        android:textStyle="bold"
                        android:layout_toRightOf="@id/tvDontHaveAccount"
                        android:layout_marginLeft="@dimen/margin_create_here"
                        android:onClick="goToCreateAccount"
                        />


                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_info"
                    android:textColor="@color/colorNoAccent"
                    android:gravity="bottom|center_horizontal"
                    android:layout_marginLeft="@dimen/margin_create_here"
                    android:onClick="goToGithub"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_info_mail"
                    android:textColor="@color/colorNoAccent"
                    android:gravity="bottom|center_horizontal"
                    android:layout_marginLeft="@dimen/margin_create_here"
                    android:onClick="goToGithub"
                    />





            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>