<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewproduct"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:background="@color/colorPrimary"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            >
            <ImageView
                android:id="@+id/ivProductImageCard"
                android:layout_width="@dimen/height_productimage_cardview"
                android:layout_height="@dimen/height_productimage_cardview"
                android:background="@drawable/image"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/margin_items_productcard"
                android:transitionName="@string/transitionname_place"
                />
            <TextView
                android:id="@+id/edtProductNameCard"
                android:layout_width="@dimen/margin_productname"
                android:layout_height="wrap_content"
                android:text="@string/productname_card"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_items_productcard"
                android:textSize="@dimen/textsize_productname_card"/>

            <TextView
                android:id="@+id/edtProductPriceCard"
                android:layout_width="@dimen/margin_productprice"
                android:layout_height="wrap_content"
                android:text="@string/productprice_card"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_items_productcard"
                android:textSize="@dimen/textsize_productplace_card"/>

        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>